--- a/admin/outline.html
+++ b/admin/outline.html
@@ -103,11 +103,10 @@
 <ol>
 <li>🐥<span class="label label-primary">Lecture</span> Intro OOP</li>
 <li>🐥<span class="label label-primary">Lecture</span> Dispatch / Dynamic binding / Polymorphism / sending message is making a choice</li>
-<li>🐥<span class="label label-warning">Case Study</span> Case study on Polymorphism</li>
 <li>🐥<span class="label label-primary">Lecture</span> Encapsulation - monoclass ^ #black</li>
 <li>🐥<span class="label label-primary">Lecture</span> Inheritance</li>
 <li>🐥<span class="label label-primary">Lecture</span> Two interfaces of OOP</li>
-<li>🐥<span class="label label-warning">Case Study</span> Points in Java vs. Pharo</li>
+<li>🐥<span class="label label-warning">Case Study</span> Point in Java vs. Pharo</li>
 <li>🐥<span class="label label-warning">Case Study</span> DatePrinter</li>
 <li>🐥<span class="label label-primary">Lecture</span> Use vs Inheritance</li>
 <li>🐥<span class="label label-primary">Lecture</span> Class are static vs. Instances</li>
@@ -129,7 +128,7 @@
 </ul>
 </li>
 <li>🐥 <span class="label label-primary">Lecture</span> Delegation</li>
-<li>🐥 <span class="label label-warning">Case Study</span> Class printer</li>
+<li>🐥 <span class="label label-warning">Case Study</span> Class printer (parametrisation, anti-if, extensibility)</li>
 <li>🐥 <span class="label label-primary">Lecture</span> Subclass vs. Subtyping</li>
 <li>🎁 <span class="label label-primary">Lecture</span> AntiIf
     <ul>
@@ -142,12 +141,12 @@
 <li>🐥 <span class="label label-primary">Lecture</span> LOD</li>
 <li>🎁 <span class="label label-primary">Lecture</span> Reify / Representing Domain / Creating an object<br/> Not only concrete objects but abstractions!</li>
 
-<li>🎁 <span class="label label-warning">Case Study</span> Sokoban example</li>
+<li>🎁 <span class="label label-warning">Case Study</span> Sokoban example (domain modeling, reification, anti-if, double dispatch)</li>
 <li>🎁 <span class="label label-primary">Lecture</span> Parametrisation<ul>
     <li>Control Global</li>
     <li>Instance-based parametrisable</li>
 </ul></li>
-<li>🎁 <span class="label label-warning">Case Study</span> using Transcript</li>
+<li>🎁 <span class="label label-warning">Case Study</span> Logging with Transcript (parametrization, depenency injection)</li>
 </ol>
 </section>
 
@@ -164,12 +163,10 @@
 <li>🎁 <span class="label label-primary">Lecture</span> Transform conditional to registration</li>
 <li>🎁 <span class="label label-primary">Lecture</span> Class vs. Instance Hooks</li>
 <li>🎁 <span class="label label-primary">Lecture</span> Class side methods as factory methods</li>
-<li>🎁 <span class="label label-primary">Lecture</span> Class side methods as Facade+factory
-    <ul>
-        <li>Driver glorp</li>
-    </ul>
-</li>
+<li>🎁 <span class="label label-primary">Lecture</span> Class side methods as Facade+factory</li>
+<li>🎁 <span class="label label-warning">Case Study</span> Driver glorp (Facade+factory)</li>
 <li>🐥 <span class="label label-primary">Lecture</span> Refactoring strategies</li>
+</ol>
 </section>
 
 <!-- ================================================================================ -->
@@ -202,14 +199,13 @@
 
 <ol>
 <li>🌶 <span class="label label-warning">Exercise</span> Uno checker</li>
-<li>🌶 <span class="label label-warning">Exercise</span> Sokoban</li>
-<li>🌶 <span class="label label-warning">Exercise</span> PacMan</li>
-<li>🌶 <span class="label label-warning">Exercise</span> Analyser Pharo</li>
+<li>🌶 <span class="label label-warning">Exercise</span> PacMan (domain modeling, reification, anti-if, double dispatch)</li>
+<li>🌶 <span class="label label-warning">Exercise</span> Analyser Pharo ???</li>
 <li>🌶 <span class="label label-warning">Exercise</span> MicroDown visitor</li>
 <li>🌶 <span class="label label-warning">Exercise</span> ParserJSON</li>
 <li>🌶 <span class="label label-warning">Case Study</span> Seaside</li>
-<li>🌶 <span class="label label-warning">Case Study</span> Pharo standard library: Boolean</li>
-<li>🌶 <span class="label label-warning">Case Study</span> Pharo standard library: Settings</li>
+<li>🌶 <span class="label label-warning">Case Study</span> Pharo standard library: Boolean (dispatch, polymorphism)</li>
+<li>🌶 <span class="label label-warning">Case Study</span> Pharo standard library: Settings (modularize crosscutting concerns, extensibility, unplaggable?) </li>
 <li>🌶 <span class="label label-warning">Case Study</span> Pharo standard library: Stream</li>
 </ol>
 </section>
